--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     document.addEventListener("DOMContentLoaded", function () {
       const bar = document.createElement("div");
       bar.id = "iconBarJS";
-      bar.style.position = "fixed";
+      bar.style.position = "absolute";
       bar.style.top = "20px";
       bar.style.right = "30px";
       bar.style.display = "flex";
