--- a/index.html
+++ b/index.html
@@ -143,3 +143,37 @@
 
 </body>
 </html>
+<section>
+  <!-- OYUN ALANI (sayfa 2) -->
+<section id="flappySection" style="height: 100vh; background: #222; display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 20px;">
+  <h2 style="color: white; font-family: 'Abril Fatface', cursive; font-size: 2.5rem; margin-bottom: 20px;">🎂 Flappy BCAT 🎮</h2>
+
+  <canvas id="flappyCanvas" width="360" height="480" style="border: 3px solid white; border-radius: 10px; background: linear-gradient(to bottom, #a1c4fd, #c2e9fb); max-width: 90vw;"></canvas>
+
+  <div id="scoreDisplay" style="margin-top: 20px; color: white; font-size: 1.5rem; font-family: monospace;">
+    Score: <span id="score">0</span>
+  </div>
+</section>
+<script>
+  <script>
+  const canvas = document.getElementById("flappyCanvas");
+  const ctx = canvas.getContext("2d");
+
+  let score = 0;
+  let isPlaying = true;
+
+  function draw() {
+    if (!isPlaying) return;
+
+    // Temel Arka Plan (ileride değişecek)
+    ctx.fillStyle = "#c2e9fb";
+    ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+    // Skoru güncelle
+    document.getElementById("score").textContent = score;
+
+    requestAnimationFrame(draw);
+  }
+
+  draw();
+</script>
