--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
   <!-- NYAN CAT -->
   <div id="nyanZone">
-    <img id="nyanCat" src="giphy.gif" alt="Nyan Cat">
+    <img id="nyanCat" src="nyan-cat.gif" alt="Nyan Cat">
   </div>
 
   <!-- GÖRSEL ALAN -->
