--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
 
   <style>
-    body {
+    html, body {
       margin: 0;
+      padding: 0;
+      min-height: 100%;
       background: linear-gradient(-45deg, #ff9a9e, #fad0c4, #a1c4fd, #c2e9fb);
       background-size: 600% 600%;
       animation: gradientMove 10s ease-in-out infinite;
+      font-family: 'Abril Fatface', cursive;
     }
 
     @keyframes gradientMove {
@@ -20,20 +23,19 @@
       100% { background-position: 0% 50%; }
     }
 
+    #topTitle {
+      font-size: 3.5rem;
+      animation: colorShift 8s ease-in-out infinite;
+      text-align: center;
+      margin: 40px 0 0;
+    }
+
     @keyframes colorShift {
       0% { color: #ff9a9e; }
       25% { color: #fad0c4; }
       50% { color: #a1c4fd; }
       75% { color: #c2e9fb; }
       100% { color: #ff9a9e; }
-    }
-
-    #topTitle {
-      font-family: 'Abril Fatface', cursive;
-      font-size: 3.5rem;
-      margin: 0;
-      animation: colorShift 8s ease-in-out infinite;
-      text-align: center;
     }
 
     #nyanZone {
@@ -47,16 +49,127 @@
     #nyanCat {
       width: 240px;
     }
+
+    section.main {
+      display: grid;
+      grid-template-columns: 1fr 1.5fr 1fr;
+      align-items: center;
+      height: 100vh;
+      gap: 20px;
+      padding: 40px;
+      box-sizing: border-box;
+    }
+
+    .gif-col {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+    }
+
+    .gif-col img {
+      width: 500px;
+      height: 400px;
+      object-fit: cover;
+      border-radius: 20px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.4);
+    }
+
+    .video-box {
+      width: 100%;
+      height: 65%;
+      border-radius: 20px;
+      overflow: hidden;
+      position: relative;
+      align-self: center;
+    }
+
+    .video-box video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 20px;
+    }
+
+    /* LOGO BAR */
+    #iconBarJS {
+      position: fixed;
+      top: 20px;
+      right: 30px;
+      display: flex;
+      gap: 20px;
+      z-index: 9999;
+      padding: 10px 15px;
+      background: rgba(255,255,255,0.3);
+      border-radius: 16px;
+      backdrop-filter: blur(5px);
+    }
+
+    #iconBarJS img {
+      width: 42px;
+      height: 42px;
+      border-radius: 8px;
+      transition: transform 0.3s ease, filter 0.3s ease;
+    }
+
+    #iconBarJS img:hover {
+      transform: scale(1.2);
+      filter: brightness(1.3);
+    }
+
+    /* OYUN ALANI */
+    #flappySection {
+      height: 100vh;
+      background: #222;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      padding: 40px;
+    }
+
+    #flappySection h2 {
+      color: white;
+      font-size: 2.5rem;
+      margin-bottom: 20px;
+    }
+
+    #flappyCanvas {
+      border: 3px solid white;
+      border-radius: 10px;
+      background: linear-gradient(to bottom, #a1c4fd, #c2e9fb);
+      max-width: 90vw;
+    }
+
+    #scoreDisplay {
+      margin-top: 20px;
+      color: white;
+      font-size: 1.5rem;
+      font-family: monospace;
+    }
   </style>
 </head>
 
 <body>
-  <!-- BAŞLIK -->
-  <div style="display: flex; justify-content: center; align-items: center; padding-top: 40px;">
-    <div style="background: rgba(0,0,0,0.3); border-radius: 30px; padding: 20px 40px; box-shadow: 0 0 20px rgba(0,0,0,0.4);">
-      <h1 id="topTitle">Welcome BirthdayCat</h1>
-    </div>
+  <!-- SABİT LOGO BAR -->
+  <div id="iconBarJS">
+    <a href="https://t.me/YOUR_TELEGRAM" target="_blank">
+      <img src="Telegrampng.png" alt="Telegram">
+    </a>
+    <a href="https://x.com/YOUR_X" target="_blank">
+      <img src="Xpng.png" alt="X">
+    </a>
+    <a href="https://dexscreener.com" target="_blank">
+      <img src="Dexpng.png" alt="Dexscreener">
+    </a>
+    <a href="https://coingecko.com" target="_blank">
+      <img src="geckopng3.webp" alt="CoinGecko">
+    </a>
   </div>
+
+  <!-- BAŞLIK -->
+  <h1 id="topTitle">Welcome BirthdayCat</h1>
 
   <!-- NYAN CAT -->
   <div id="nyanZone">
@@ -64,174 +177,90 @@
   </div>
 
   <!-- GÖRSEL ALAN -->
-  <section style="display: grid; grid-template-columns: 1fr 1.5fr 1fr; align-items: center; height: 100vh; gap: 20px; padding: 40px; box-sizing: border-box;">
-    
-    <!-- Sol 2 GIF -->
-    <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; gap: 20px;">
-      <img src="gozluk.gif" alt="Top Left Cat" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
-      <img src="gozluk.gif" alt="Bottom Left Cat" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
+  <section class="main">
+    <div class="gif-col">
+      <img src="gozluk.gif" alt="Top Left Cat" />
+      <img src="gozluk.gif" alt="Bottom Left Cat" />
     </div>
 
-    <!-- VİDEO ORTA -->
-    <div style="width: 100%; height: 65%; border-radius: 20px; overflow: hidden; position: relative; align-self: center;">
-      <video id="bcatVideo" autoplay loop muted playsinline style="width: 100%; height: 100%; object-fit: cover; border-radius: 20px;">
+    <div class="video-box">
+      <video id="bcatVideo" autoplay loop muted playsinline>
         <source src="bcat-video-fast-optimized.mp4" type="video/mp4">
-        Your browser does not support the video tag.
       </video>
     </div>
 
-    <!-- Sağ 2 GIF -->
-    <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; gap: 20px;">
-      <img src="gozluk.gif" alt="Top Right Cat" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
-      <img src="gozluk.gif" alt="Bottom Right Cat" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
+    <div class="gif-col">
+      <img src="gozluk.gif" alt="Top Right Cat" />
+      <img src="gozluk.gif" alt="Bottom Right Cat" />
     </div>
   </section>
 
-  <!-- SABİT LOGO BAR (JS ile) -->
+  <!-- OYUN -->
+  <section id="flappySection">
+    <h2>🎂 Flappy BCAT 🎮</h2>
+    <canvas id="flappyCanvas" width="360" height="480"></canvas>
+    <div id="scoreDisplay">
+      Score: <span id="score">0</span>
+    </div>
+  </section>
+
+  <!-- JS -->
   <script>
+    // Video hızını ayarla
     document.addEventListener("DOMContentLoaded", function () {
-      const bar = document.createElement("div");
-      bar.id = "iconBarJS";
-      bar.style.position = "absolute";
-      bar.style.top = "20px";
-      bar.style.right = "30px";
-      bar.style.display = "flex";
-      bar.style.gap = "20px";
-      bar.style.zIndex = "9999";
-      bar.style.padding = "10px 15px";
-      bar.style.background = "rgba(255,255,255,0.3)";
-      bar.style.borderRadius = "16px";
-      bar.style.backdropFilter = "blur(5px)";
-
-      const logos = [
-        { href: "https://t.me/YOUR_TELEGRAM", src: "Telegrampng.png", alt: "Telegram" },
-        { href: "https://x.com/YOUR_X", src: "Xpng.png", alt: "X" },
-        { href: "https://dexscreener.com", src: "Dexpng.png", alt: "Dexscreener" },
-        { href: "https://coingecko.com", src: "geckopng3.webp", alt: "CoinGecko" }
-      ];
-
-      logos.forEach(logo => {
-        const a = document.createElement("a");
-        a.href = logo.href;
-        a.target = "_blank";
-        const img = document.createElement("img");
-        img.src = logo.src;
-        img.alt = logo.alt;
-        img.style.width = "42px";
-        img.style.height = "42px";
-        img.style.borderRadius = "8px";
-        img.style.transition = "transform 0.3s ease, filter 0.3s ease";
-        img.onmouseover = () => {
-          img.style.transform = "scale(1.2)";
-          img.style.filter = "brightness(1.3)";
-        };
-        img.onmouseout = () => {
-          img.style.transform = "scale(1)";
-          img.style.filter = "brightness(1)";
-        };
-        a.appendChild(img);
-        bar.appendChild(a);
-      });
-
-      document.body.appendChild(bar);
-
-      // Video hızı
       const vid = document.getElementById("bcatVideo");
       vid.playbackRate = 3.0;
     });
-  </script>
 
-</body>
-</html>
-<section>
-  <!-- OYUN ALANI (sayfa 2) -->
-<section id="flappySection" style="height: 100vh; background: #222; display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 20px;">
-  <h2 style="color: white; font-family: 'Abril Fatface', cursive; font-size: 2.5rem; margin-bottom: 20px;">🎂 Flappy BCAT 🎮</h2>
+    // Flappy oyun
+    const canvas = document.getElementById("flappyCanvas");
+    const ctx = canvas.getContext("2d");
 
-  <canvas id="flappyCanvas" width="360" height="480" style="border: 3px solid white; border-radius: 10px; background: linear-gradient(to bottom, #a1c4fd, #c2e9fb); max-width: 90vw;"></canvas>
+    const nyanImg = new Image();
+    nyanImg.src = "nyan-cat.gif";
 
-  <div id="scoreDisplay" style="margin-top: 20px; color: white; font-size: 1.5rem; font-family: monospace;">
-    Score: <span id="score">0</span>
-  </div>
-</section>
-<script>
-  <script>
-  const canvas = document.getElementById("flappyCanvas");
-  const ctx = canvas.getContext("2d");
+    let score = 0;
+    let isPlaying = true;
 
-  let score = 0;
-  let isPlaying = true;
+    let nyan = {
+      x: 50,
+      y: 150,
+      width: 50,
+      height: 40,
+      velocity: 0,
+      gravity: 0.6,
+      jumpStrength: -10
+    };
 
-  function draw() {
-    if (!isPlaying) return;
+    document.addEventListener("keydown", (e) => {
+      if (e.code === "Space") nyan.velocity = nyan.jumpStrength;
+    });
 
-    // Temel Arka Plan (ileride değişecek)
-    ctx.fillStyle = "#c2e9fb";
-    ctx.fillRect(0, 0, canvas.width, canvas.height);
+    canvas.addEventListener("click", () => {
+      nyan.velocity = nyan.jumpStrength;
+    });
 
-    // Skoru güncelle
-    document.getElementById("score").textContent = score;
+    function draw() {
+      if (!isPlaying) return;
 
-    requestAnimationFrame(draw);
-  }
+      ctx.fillStyle = "#c2e9fb";
+      ctx.fillRect(0, 0, canvas.width, canvas.height);
 
-  draw();
-</script>
-<script>
-  const canvas = document.getElementById("flappyCanvas");
-  const ctx = canvas.getContext("2d");
+      nyan.velocity += nyan.gravity;
+      nyan.y += nyan.velocity;
 
-  const nyanImg = new Image();
-  nyanImg.src = "nyan-cat.gif"; // senin dosya adın neyse o olsun
+      if (nyan.y + nyan.height >= canvas.height) {
+        isPlaying = false;
+        alert("Oyun bitti! Skor: " + score);
+      }
 
-  let score = 0;
-  let isPlaying = true;
+      ctx.drawImage(nyanImg, nyan.x, nyan.y, nyan.width, nyan.height);
+      document.getElementById("score").textContent = score;
 
-  // Karakterin başlangıç konumu
-  let nyan = {
-    x: 50,
-    y: 150,
-    width: 50,
-    height: 40,
-    velocity: 0,
-    gravity: 0.6,
-    jumpStrength: -10
-  };
-
-  // Kontrol: Space + Touch
-  document.addEventListener("keydown", (e) => {
-    if (e.code === "Space") nyan.velocity = nyan.jumpStrength;
-  });
-
-  canvas.addEventListener("click", () => {
-    nyan.velocity = nyan.jumpStrength;
-  });
-
-  function draw() {
-    if (!isPlaying) return;
-
-    // Arka plan
-    ctx.fillStyle = "#c2e9fb";
-    ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-    // Karakter fiziği
-    nyan.velocity += nyan.gravity;
-    nyan.y += nyan.velocity;
-
-    // Yere çarpma kontrolü
-    if (nyan.y + nyan.height >= canvas.height) {
-      isPlaying = false;
-      alert("Oyun bitti! Skor: " + score);
+      requestAnimationFrame(draw);
     }
 
-    // Nyan Cat çiz
-    ctx.drawImage(nyanImg, nyan.x, nyan.y, nyan.width, nyan.height);
-
-    // Skoru göster
-    document.getElementById("score").textContent = score;
-
-    requestAnimationFrame(draw);
-  }
-
-  draw();
-</script>
+    draw();
+  </script>
+</body>
+</html>
