--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
 
   <style>
-    body {
+       body {
       margin: 0;
+      min-height: 100vh; /* Bu satır background'un tüm sayfayı kapsamasını sağlar */
       background: linear-gradient(-45deg, #ff9a9e, #fad0c4, #a1c4fd, #c2e9fb);
       background-size: 600% 600%;
       animation: gradientMove 10s ease-in-out infinite;
     }
+
 
     @keyframes gradientMove {
       0% { background-position: 0% 50%; }
