--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
 </html>
 <section>
   <!-- OYUN ALANI (sayfa 2) -->
-<section id="flappySection" style="height: 100vh; background: #222; display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 20px;">
+<section id="flappySection" style="height: 100vh; background: linear-gradient; display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 20px;">
   <h2 style="color: white; font-family: 'Abril Fatface', cursive; font-size: 2.5rem; margin-bottom: 20px;">🎂 Flappy BCAT 🎮</h2>
 
-  <canvas id="flappyCanvas" width="360" height="480" style="border: 3px solid white; border-radius: 10px; background: linear-gradient(to bottom, #a1c4fd, #c2e9fb); max-width: 90vw;"></canvas>
+  <canvas id="flappyCanvas" width="460" height="480" style="border: 3px solid white; border-radius: 10px; background: linear-gradient(to bottom, #a1c4fd, #c2e9fb); max-width: 90vw;"></canvas>
 
   <div id="scoreDisplay" style="margin-top: 20px; color: white; font-size: 1.5rem; font-family: monospace;">
     Score: <span id="score">0</span>
