--- a/index.html
+++ b/index.html
@@ -145,6 +145,67 @@
       vid.playbackRate = 3.0;
     });
   </script>
+<script>
+  const canvas = document.getElementById("flappyCanvas");
+  const ctx = canvas.getContext("2d");
+
+  // Arka plan görseli
+  const bgImage = new Image();
+  bgImage.src = "u1ZpVC.png"; // kendi resminin adı neyse onu yaz
+
+  const nyanImg = new Image();
+  nyanImg.src = "nyan-cat.gif";
+
+  let bgX = 0;
+  const scrollSpeed = 2;
+
+  let score = 0;
+  let isPlaying = true;
+
+  let nyan = {
+    x: 50,
+    y: 150,
+    width: 50,
+    height: 40,
+    velocity: 0,
+    gravity: 0.6,
+    jumpStrength: -10
+  };
+
+  document.addEventListener("keydown", (e) => {
+    if (e.code === "Space") nyan.velocity = nyan.jumpStrength;
+  });
+
+  canvas.addEventListener("click", () => {
+    nyan.velocity = nyan.jumpStrength;
+  });
+
+  function draw() {
+    if (!isPlaying) return;
+
+    // Scroll arka plan
+    bgX -= scrollSpeed;
+    if (bgX <= -canvas.width) bgX = 0;
+    ctx.drawImage(bgImage, bgX, 0, canvas.width, canvas.height);
+    ctx.drawImage(bgImage, bgX + canvas.width, 0, canvas.width, canvas.height);
+
+    // Nyan Cat fiziği
+    nyan.velocity += nyan.gravity;
+    nyan.y += nyan.velocity;
+
+    if (nyan.y + nyan.height >= canvas.height) {
+      isPlaying = false;
+      alert("Oyun bitti! Skor: " + score);
+    }
+
+    ctx.drawImage(nyanImg, nyan.x, nyan.y, nyan.width, nyan.height);
+    document.getElementById("score").textContent = score;
+
+    requestAnimationFrame(draw);
+  }
+
+  draw();
+</script>
 
 </body>
 </html>
@@ -153,7 +214,8 @@
 <section id="flappySection" style="height: 100vh; background: linear-gradient; display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 20px;">
   <h2 style="color: white; font-family: 'Abril Fatface', cursive; font-size: 2.5rem; margin-bottom: 20px;">🎂 Flappy BCAT 🎮</h2>
 
-  <canvas id="flappyCanvas" width="660" height="480" style="border: 3px solid white; border-radius: 10px; background: linear-gradient(to bottom, #a1c4fd, #c2e9fb); max-width: 90vw;"></canvas>
+  <canvas id="flappyCanvas" width="660" height="480" style="border: 3px solid white; border-radius: 10px; background: black; max-width: 90vw;"></canvas>
+
 
   <div id="scoreDisplay" style="margin-top: 20px; color: white; font-size: 1.5rem; font-family: monospace;">
     Score: <span id="score">0</span>
