--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
   // Arka plan görseli
   const bgImage = new Image();
-  bgImage.src = "u1ZpVC.png"; // kendi resminin adı neyse onu yaz
+  bgImage.src = "u1ZpVC.png"; // 
 
   const nyanImg = new Image();
   nyanImg.src = "nyan-cat.gif";
