--- a/index.html
+++ b/index.html
@@ -210,7 +210,6 @@
 </body>
 </html>
 <section>
-  <!-- OYUN ALANI (sayfa 2) -->
 <!-- OYUN ALANI (sayfa 2) -->
 <section id="flappySection" style="height: 100vh; display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 20px;">
   <h2 style="color: white; font-family: 'Abril Fatface', cursive; font-size: 2.5rem; margin-bottom: 20px;">🎂 Flappy BCAT 🎮</h2>
@@ -227,7 +226,7 @@
   const ctx = canvas.getContext("2d");
 
   const bgImage = new Image();
-  bgImage.src = "u1ZpVC.png"; // senin görselin
+  bgImage.src = "u1ZpVC.png"; // Bu dosya index.html ile aynı klasörde olmalı
 
   const nyanImg = new Image();
   nyanImg.src = "nyan-cat.gif";
